--- a/src/pages/dashboard/dashboard.html
+++ b/src/pages/dashboard/dashboard.html
@@ -2,17 +2,18 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Proxy</title>
+    <link rel="icon" href="../../assets/favicon.svg" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
     <!-- bootstrap 5 css -->
     <!-- custom css -->
-    <link rel="stylesheet" href="./dashboard.css">
+    <link rel="stylesheet" href="./dashboard.css" />
 </head>
 
-<body class="bg-dark ">
+<body class="bg-dark">
     <!-- ###################### Navigation Bar ##################### -->
 
     <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
@@ -23,19 +24,20 @@
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class=" collapse navbar-collapse justify-content-end " id="navbarSupportedContent">
-                <ul class="navbar-nav ">
-                    <li class="nav-item  active">
-                        <a class="nav-link" href="#home"><span class="navItems themeColor">Home</span>
-                            <span class="sr-only"></span></a>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#home"><span class="navItems themeColor">Register Employee</span></a>
                     </li>
-                    <li class="nav-item ">
-                        <a class="nav-link" href="#camera"><span class="navItems themeColor">Mark Attendence</span></a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./dashboard.html#employeeList"><span
+                                class="navItems themeColor">Employe List</span></a>
                     </li>
-                    <li class="nav-item ">
-                        <a class="nav-link" href="#contactBookmark"><span class="navItems themeColor">Contact</span></a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../markAttendence/markAttendence.html"><span
+                                class="navItems themeColor">Mark Attendence</span></a>
                     </li>
-                    <li class="nav-item ">
+                    <li class="nav-item">
                         <a class="nav-link btn bg-dark text-light signInBtn" id="logout"
                             href="./Utilities/pages/loginOrSignup.html#signUpPane">Log out</a>
                     </li>
@@ -45,52 +47,148 @@
     </nav>
 
     <div class="container mb-20">
-
         <!-- home -->
-        <i id="home" style="margin-bottom:5em;"></i>
+        <i id="home" style="margin-bottom: 5em"></i>
         <div class="vh-100 w-100 text-center">
-            <h1 class="text-light  text-center" style="margin-top:2em;">Home</h1>
-            <h1 class="bg-light w-100 rounded p-2" style="margin-top:2em;">Register Employee</h1>
-
-            <!-- employee Form -->
-            <form class="needs-validation row d-flex  justify-content-center" id="form" novalidate>
-
-                <!-- name of employee -->
-                <div class=" mb-3 w-25">
-                    <input type="text" class="form-control w-10" id="nameOfEmployee" placeholder="Name" required>
-                </div>
-
-                <!-- email of employee -->
-                <div class="mb-3 w-25">
-                    <input type="text" class=" form-control" id="employeeEmail" placeholder="Email"
-                        aria-describedby="validationTooltipUsernamePrepend" required>
-                </div>
-
-                <!-- image1 -->
-                <div class="custom-file  mb-3">
-                    <button class="p-1">
-                        <input type="file" class="custom-file-input" id="employeeImage1" required>
+            <h1 class="text-light text-center" style="margin-top: 2em">Home</h1>
+            <h1 class="bg-light w-100 rounded p-2" style="margin-top: 2em">
+                Register Employee
+            </h1>
+            <div class="container d-flex  w-25 justify-content-center flex-column">
+                <!-- employee Form -->
+                <form class="needs-validation row d-flex justify-content-center" id="form" novalidate>
+                    <p class="text-light mt-3 mb-0 ml-1" for="image1" style="text-align: left; padding-left: 1em">
+                        ENTER NAME
+                    </p>
+                    <input type="text" class="name w-100 p-3 mt-1 ml-3 mb-2 bg-light" placeholder="Name"
+                        id="nameOfEmployee" style="border-radius: 10px; font-size: 20px" />
+                    <p class="text-light mt-3 mb-0 ml-1" for="image1" style="text-align: left; padding-left: 1em">
+                        ENTER E-MAIL
+                    </p>
+                    <input type="text" class="email w-100 p-3 mt-1 ml-3 mb-2 bg-light" placeholder="Email"
+                        id="employeeEmail" style="border-radius: 10px; font-size: 20px" />
+                    <p class="text-light mb-0 ml-1 mt-2" for="image1" style="text-align: left; padding-left: 1em">
+                        SELECT A IMAGE
+                    </p>
+                    <input type="file" class="image-1 w-100 p-3 ml-3 mb-2 bg-light" id="employeeImage1"
+                        style="border-radius: 10px; font-size: 20px" />
+                    <!-- <button class="btn btn-primary w-25" id="employeeFormSubmit" type="submit" ">Submit
+                        form</button> -->
+                    <button class="btn btn-primary w-50" id="employeeFormSubmit" type="submit">
+                        Submit form
                     </button>
-                </div>
-                <!-- <button class="btn btn-primary w-25" id="employeeFormSubmit" type="submit" ">Submit
-                    form</button> -->
-                <button class="btn btn-primary w-25" id="employeeFormSubmit" type="submit">Submit form</button>
-            </form>
+                </form>
+            </div>
         </div>
 
-        <!-- camera -->
-        <!-- marking position of camera section-->
-        <i id=" camera"></i>
-        <div class=" vh-100 ">
-            <h1 class=" text-center text-light w-100">camera</h1>
-            <!-- video Element -->
-            <div class="video-container d-flex justify-content-center w-100" id="videoContainer">
-                <video id="videoInput" width="720" height="720" autoplay muted></video>
+        <i id="employeeList"></i>
+        <!-- employee Table -->
+        <div class="vh-100 w-100 h-100 text-center">
+            <div class="d-flex mt-5 justify-content-center">
+                <h1 class="text-dark" w-100 rounded p-2 text-center style="margin-top: 2em"></h1>
+            </div>
+            <div class="d-flex justify-content-center" id="employeeList">
+                <!-- space -->
+                <h1 class="bg-light w-50 mb-1 rounded p-2 text-center" style="margin-top: 5em">
+                    Employee list
+                </h1>
+            </div>
+            <div class="form-group pull-left justify-content-center mt-5" id="search">
+                <input type="text" class="search form-control" onkeyup="myFunction()"
+                    placeholder="Enter email for attendence" style="width: 430px !important" />
+            </div>
+            <div class="container">
+                <table class="table table-dark" id="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Name</th>
+                            <th scope="col">Email</th>
+                            <th scope="col">Date</th>
+                            <th scope="col">Status</th>
+                        </tr>
+                    </thead>
+                    <tbody id="rows">
+                        <tr>
+                            <th scope="row">1</th>
+                            <td>Mark</td>
+                            <td>Otto</td>
+                            <td>22-05-2022</td>
+                            <td class="bg-light border-success text-success">
+                                <b>Present</b>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <nav aria-label="Page navigation example">
+                <ul class="pagination">
+                    <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Previous" id="previous">
+                            <span aria-hidden="true">&laquo;</span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Next" id="next">
+                            <span aria-hidden="true">&raquo;</span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+
+        <!-- spacing -->
+        <div class="d-flex mt-5 justify-content-center">
+            <h1 class="text-dark w-100 rounded p-2 text-center" id="FAQ" style="margin-top: 5em"></h1>
+        </div>
+
+        <!-- footer -->
+        <hr class="bg-light" />
+        <div class="container-fluid footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <h3 class="text-light">About</h3>
+                        <p class="text-light">
+                            Proxy is an online attendence marking service and is known for
+                            it’s accuracy and adaptability
+                        </p>
+                    </div>
+                    <div class="col-md-4">
+                        <h3 class="text-light">Contact</h3>
+                        <p class="text-light">
+                            Email:
+                            <a href="mailto:saurabhsonig12@gmail.com" target="_blank">saurabhsonig12
+                            </a>
+                        </p>
+                        <p class="text-light">Phone: +918839342190</p>
+                    </div>
+                    <div class="col-md-4">
+                        <h3 class="text-light">Follow Us</h3>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <a href="https://www.linkedin.com/in/saurabh100ni/" style="text-decoration: none"
+                                    target="_blank">
+                                    <img src="../../assets/Linkedin.svg" class="ContactPaneImages" style="width: 3em"
+                                        alt="Email" />
+                                </a>
+                                <a href="https://github.com/saurabh100ni">
+                                    <img src="https://github.githubassets.com/images/modules/logos_page/Octocat.png"
+                                        class="ContactPaneImages" style="width: 3em" alt="Email" />
+                                </a>
+                                <a href="https://www.instagram.com/cfb.code/">
+                                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/2048px-Instagram_logo_2016.svg.png"
+                                        class="ContactPaneImages" style="width: 3em" alt="Email" />
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-
-
 
     <!-- JavaScript Bundle with Popper -->
     <!-- JavaScript Bundle with Popper -->
@@ -98,11 +196,10 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 
-
     <!-- face recognition -->
-    <script defer src="./FaceDetection/face-api.min.js"></script>
-    <script defer src="./FaceDetection/faceScript.js"></script>
     <script type="module" src="./dashboard.js" defer></script>
+    <script type="module" src="./employee_list.js" defer></script>
+    <script></script>
 </body>
 
 </html>
