--- a/src/pages/loginAndSignUp/loginOrSignup.html
+++ b/src/pages/loginAndSignUp/loginOrSignup.html
@@ -6,8 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proxy</title>
+    <link rel="icon" href="../../assets/favicon.svg">
     <link rel="stylesheet" href="./loginOrSignup.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    <link rel="stylesheet" href="../../../style.css">
+    <link href=" https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
@@ -55,8 +57,7 @@
                         </div>
 
                         <!-- Submit button -->
-                        <button type="submit" class="btn btn-primary btn-lg w-100 btn-block" id="login"
-                            onclick="signIn()">Sign in</button>
+                        <button type="submit" class="btn btn-primary btn-lg w-100 btn-block" id="login">Log in</button>
 
                         <div class=" divider d-flex align-items-center my-4">
                             <p class="text-center w-100 fw-bold mx-3 mb-0 text-muted">OR Continue with</p>
